--- a/config/lovelace/views/02-lights.yaml
+++ b/config/lovelace/views/02-lights.yaml
@@ -1515,6 +1515,224 @@
                     action: toggle
                   hold_action:
                     action: more-info
+        - type: markdown  ### column
+          content: |
+            ### Main lights
+          style: |
+            ha-card {
+              height: 20px !important;
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
+              font-size: 20px;
+              font-weight: bold;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: markdown
+          content: >
+            **Adaptive lighting switches**
+          style: |
+            ha-card {
+              height: 50px;
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
+              font-size: 14px;
+              font-weight: thin;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: vertical-stack  ### Light Buttons
+          cards:
+            - type: horizontal-stack
+              cards:
+                - type: 'custom:button-card'
+                  show_icon: false
+                  show_name: false
+                  style: |
+                    ha-card {
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                    box-shadow: 2px 2px rgba(0,0,0,0.0);
+                    }
+                  styles:
+                    card:
+                      - width: 5px
+                      - height: 60px
+                - type: 'custom:button-card'  # button
+                  entity: switch.adaptive_lighting_main_lights
+                  icon: 'mdi:theme-light-dark'
+                  show_icon: true
+                  show_name: false
+                  state:
+                    - styles:
+                        icon:
+                          - color: 'var(--paper-item-icon-active-color)  '
+                      value: 'on'
+                  style: |
+                    ha-card {
+                      box-shadow:
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_main_lights', 'on') %}
+                          inset -4px -4px 8px 0 var(--softui-boxshadow-top), inset 4px 4px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_main_lights', 'on') %}
+                          inset -4px -4px 10px 0 var(--softui-boxshadow-top), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.15);
+                        {% endif %}
+                    }
+                  styles:
+                    card:
+                      - width: 55px
+                      - height: 55px
+                      - border-radius: 15px
+                      - background-color: var(--primary-background-color)
+                    icon:
+                      - color: var(--primary-text-color)
+                  tap_action:
+                    action: toggle
+                  hold_action:
+                    action: more-info
+                - type: 'custom:button-card'
+                  show_icon: false
+                  show_name: false
+                  style: |
+                    ha-card {
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                    box-shadow: 2px 2px rgba(0,0,0,0.0);
+                    }
+                  styles:
+                    card:
+                      - width: 2px
+                      - height: 60px
+                - type: 'custom:button-card'  # button
+                  entity: switch.adaptive_lighting_adapt_brightness_main_lights
+                  icon: 'mdi:brightness-6'
+                  show_icon: true
+                  show_name: false
+                  state:
+                    - styles:
+                        icon:
+                          - color: 'var(--paper-item-icon-active-color)  '
+                      value: 'on'
+                  style: |
+                    ha-card {
+                      box-shadow:
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_adapt_brightness_main_lights', 'on') %}
+                          inset -4px -4px 8px 0 var(--softui-boxshadow-top), inset 4px 4px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_adapt_brightness_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_adapt_brightness_main_lights', 'on') %}
+                          inset -4px -4px 10px 0 var(--softui-boxshadow-top), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_adapt_brightness_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.15);
+                        {% endif %}
+                    }
+                  styles:
+                    card:
+                      - width: 55px
+                      - height: 55px
+                      - border-radius: 15px
+                      - background-color: var(--primary-background-color)
+                    icon:
+                      - color: var(--primary-text-color)
+                  tap_action:
+                    action: toggle
+                  hold_action:
+                    action: more-info
+                - type: 'custom:button-card'
+                  show_icon: false
+                  show_name: false
+                  style: |
+                    ha-card {
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                    box-shadow: 2px 2px rgba(0,0,0,0.0);
+                    }
+                  styles:
+                    card:
+                      - width: 2px
+                      - height: 60px
+                - type: 'custom:button-card'  # button
+                  entity: switch.adaptive_lighting_adapt_color_main_lights
+                  icon: 'mdi:contrast'
+                  show_icon: true
+                  show_name: false
+                  state:
+                    - styles:
+                        icon:
+                          - color: 'var(--paper-item-icon-active-color)  '
+                      value: 'on'
+                  style: |
+                    ha-card {
+                      box-shadow:
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_adapt_color_main_lights', 'on') %}
+                          inset -4px -4px 8px 0 var(--softui-boxshadow-top), inset 4px 4px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_adapt_color_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_adapt_color_main_lights', 'on') %}
+                          inset -4px -4px 10px 0 var(--softui-boxshadow-top), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_adapt_color_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.15);
+                        {% endif %}
+                    }
+                  styles:
+                    card:
+                      - width: 55px
+                      - height: 55px
+                      - border-radius: 15px
+                      - background-color: var(--primary-background-color)
+                    icon:
+                      - color: var(--primary-text-color)
+                  tap_action:
+                    action: toggle
+                  hold_action:
+                    action: more-info
+                - type: 'custom:button-card'
+                  show_icon: false
+                  show_name: false
+                  style: |
+                    ha-card {
+                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                    box-shadow: 2px 2px rgba(0,0,0,0.0);
+                    }
+                  styles:
+                    card:
+                      - width: 2px
+                      - height: 60px
+                - type: 'custom:button-card'  # button
+                  entity: switch.adaptive_lighting_sleep_mode_main_lights
+                  icon: 'mdi:weather-night'
+                  show_icon: true
+                  show_name: false
+                  state:
+                    - styles:
+                        icon:
+                          - color: 'var(--paper-item-icon-active-color)  '
+                      value: 'on'
+                  style: |
+                    ha-card {
+                      box-shadow:
+                        {% if is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_sleep_mode_main_lights', 'on') %}
+                          inset -4px -4px 8px 0 var(--softui-boxshadow-top), inset 4px 4px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'above_horizon') and is_state('switch.adaptive_lighting_sleep_mode_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.03);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_sleep_mode_main_lights', 'on') %}
+                          inset -4px -4px 10px 0 var(--softui-boxshadow-top), inset 4px 4px 12px 0 rgba(0,0,0,.3);
+                        {% elif is_state('sun.sun', 'below_horizon') and is_state('switch.adaptive_lighting_sleep_mode_main_lights', 'off') %}
+                          -5px -5px 8px 0 var(--softui-boxshadow-top),5px 5px 8px 0 rgba(0,0,0,.15);
+                        {% endif %}
+                    }
+                  styles:
+                    card:
+                      - width: 55px
+                      - height: 55px
+                      - border-radius: 15px
+                      - background-color: var(--primary-background-color)
+                    icon:
+                      - color: var(--primary-text-color)
+                  tap_action:
+                    action: toggle
+                  hold_action:
+                    action: more-info
         - type: 'custom:button-card'  # Spacer
           show_icon: false
           show_name: false
